--- a/django_blog/blog/static/blog/css/style.css
+++ b/django_blog/blog/static/blog/css/style.css
@@ -43,3 +43,13 @@ footer {
     background-color: #333;
     color: white;
 }
+
+/* Flash messages */
+.messages {
+    margin: 1rem auto;
+    max-width: 900px;
+}
+.messages ul { list-style: none; }
+.messages li { padding: 0.5rem; margin-bottom: 0.5rem; border-radius: 4px; }
+.messages li.success { background: #e6ffed; color: #0a6a2b; }
+.messages li.error { background: #ffe6e6; color: #9b1b1b; }
