--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -2,7 +2,12 @@
 {% block content %}
 <h1>{{ object.title }}</h1>
 <p>{{ object.content }}</p>
-<p>By {{ object.author }} on {{ object.date_posted }}</p>
+<p>By {{ object.author }} on {{ object.published_date }}</p>
+<p>Tags:
+  {% for t in object.tags.all %}
+    <a href="{% url 'tag-posts' t.name %}">{{ t.name }}</a>{% if not forloop.last %}, {% endif %}
+  {% empty %}None{% endfor %}
+</p>
 {% if user == object.author %}
   <a href="{% url 'post-update' object.pk %}">Edit</a>
   <a href="{% url 'post-delete' object.pk %}">Delete</a>
