--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -4,6 +4,11 @@
 {% for post in posts %}
   <h2><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h2>
   <p>{{ post.content|truncatewords:20 }}</p>
-  <p>By {{ post.author }} on {{ post.date_posted }}</p>
+  <p>By {{ post.author }} on {{ post.published_date }}</p>
+  <p>Tags:
+    {% for t in post.tags.all %}
+      <a href="{% url 'tag-posts' t.name %}">{{ t.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% empty %}None{% endfor %}
+  </p>
 {% endfor %}
 {% endblock %}
